apps/media-server/sabnzbd/deployment.yaml
# Source: k8s-mediaserver/templates/sabnzbd-resources.yml
### DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media-server
  labels:
    app: sabnzbd
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: k8s-mediaserver
          image: docker.io/linuxserver/sabnzbd:5.1.3
          imagePullPolicy: Always
          ports:
            - name: sabnzbd-http
              containerPort: 8080
              protocol: TCP
            - name: sabnzbd-https
              containerPort: 9090
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /sabnzbd/wizard/
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 20
          volumeMounts:
            - name: pvc-sabnzbd-config
              mountPath: /config
            - name: mediaserver-volume
              mountPath: /data
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
      volumes:
        - name: mediaserver-volume
          persistentVolumeClaim:
            claimName: mediaserver-rwo-pvc
        - name: pvc-sabnzbd-config
          persistentVolumeClaim:
            claimName: pvc-sabnzbd-config
        - name: init-files-sabnzbd
          configMap:
            defaultMode: 493
            name: init-sabnzbd-cm
