apps/media-server/sabnzbd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: sabnzbd-http
  selector:
    app: sabnzbd
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-https
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: sabnzbd-https
  selector:
    app: sabnzbd
