apps/media-server/sabnzbd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: sabnzbd-https
      port:
        number: 9090
  tls:
    - hosts:
        - sabnzbd
